--- a/views/login.ejs
+++ b/views/login.ejs
@@ -109,6 +109,7 @@
             <li><a href="/">Home</a></li>
             <li><a href="/announcements">Announcements</a></li>
             <li><a href="/facilities">Facilities</a></li>
+            <li><a href="/maintenance-request">Maintenance Request</a></li>
             <li><a href="/login">Login</a></li>
         </ul>
     </nav>
