--- a/views/maintenanceRequest.ejs
+++ b/views/maintenanceRequest.ejs
@@ -75,8 +75,8 @@
                     </div>
 
                     <div class="mb-3">
-                        <label class="form-label">Unit Number <span class="text-danger">*</span></label>
-                        <input type="number" name="unit_number" class="form-control" placeholder="101" required>
+                        <label class="form-label">Unit Number</label>
+                        <input type="text" class="form-control" value="<%= unitNo || 'N/A' %>" disabled readonly>
                     </div>
 
                     <div class="mb-3">
